app/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "m6x11plus";
  src: url("/fonts/m6x11plus.ttf") format("truetype");
  font-style: monospace;
  font-weight: 400;
}

::selection {
  @apply bg-black dark:bg-white text-white dark:text-black;
}

html,
body {
  @apply text-lg text-white text-shadow-game;
  font-family: "m6x11plus", monospace;
}

button {
  @apply text-shadow-game;
}

@layer components {
  .crt-screen {
    @apply pointer-events-none fixed inset-0 z-50;

    background: linear-gradient(rgba(255, 255, 255, 0.02) 50%,
        rgba(0, 0, 0, 0.18) 50%),
      linear-gradient(90deg,
        rgba(255, 0, 0, 0.03),
        rgba(0, 255, 0, 0.02),
        rgba(0, 0, 255, 0.03));

    background-size: 100% 8px, 4px 100%;
    mix-blend-mode: multiply;
  }

  .crt-screen::after {
    content: "";
    @apply absolute inset-0;
    background: radial-gradient(circle,
        transparent 60%,
        rgba(0, 0, 0, 0.3) 150%);
    animation: crt-flicker 0.1s infinite;
  }
}

